# signals

./: .env.example  .gitignore  COMPREHENSIVE_EVALUATION.md  CONTRIBUTING.md  FUTURE_IMPROVEMENTS.md  IMPROVEMENTS.md  IMPROVEMENTS_PROGRESS.md  LICENSE  LIVE_RECORD.md  README.md  SECURITY.md  SKEPTIC_REVIEW.md  SKEPTIC_REVIEW_V2.md  pyproject.toml
config/: default.yaml
scripts/: ABSOLUTE_ENCODER_RESULTS.md  BROAD_COMPARISON.md  BTC_DEEP_SWEEP_RESULTS.md  BTC_SP500_PORTFOLIO_RESULTS.md  CROSS_SECTIONAL_MOMENTUM_RESULTS.md  DRAWDOWN_TOLERANT.md  FULL_EVALUATION_2026_04_21.md  FULL_UNIVERSE_RESULTS.md  HISTORICAL_STRESS_TEST.md  HOMC_ORDER5_W1000_RESULTS.md  HOMC_ORDER7_RESULTS.md  HOMC_TIER0B_COMPREHENSIVE.md  HOMC_TIER0C_HYBRID_RESULTS.md  HOMC_TIER0E_BTC_SP500.md  HOMC_TIER0F_SIZING_BLEND.md  HYSTERESIS_SWEEP_RESULTS.md  MULTI_STOCK_ALGO_EVAL.md  NULL_HYPOTHESIS_RESULTS.md  OPTIMIZER_EVAL.md  PAIRS_TRADING_RESULTS.md  PEAD_RESULTS.md  PORTFOLIO_VS_SP_BH.md  RANDOM_WINDOW_EVAL.md  RISK_PARITY_4ASSET_RESULTS.md  RULE_BASED_RESULTS.md  SP500_TREND_AND_HOMC_MEMORY.md  SP_COMPLEMENT_50K.md  SURVIVORSHIP_FREE_RESULTS.md  TIER3_COMPREHENSIVE_RESULTS.md  TIER4_IMPROVEMENTS_RESULTS.md  TRAILING_3Y_VIEW.md  TRAILING_7Y_VIEW.md  TSMOM_MULTI_ASSET_RESULTS.md  UNIVERSE_ANALYSIS.md  VOL_TARGET_SWEEP_RESULTS.md  _window_sampler.py  absolute_encoder_eval.py  algo_v2_eval.py  automation_demo.py  blend_ramp_sweep.py  (+63 more)
signals/: __init__.py  cli.py  config.py
tests/: conftest.py  test_absolute_encoder.py  test_alpaca_broker.py  test_automation.py  test_backtest.py  test_bias_free.py  test_boost.py  test_composite.py  test_data.py  test_ensemble.py  test_excel_report.py  test_factor_analysis.py  (+20 more)
(+118 files in other folders)
